# revcolorsensor

./: pyproject.toml
docs/revcolorsensor/: colorsensor.html  index.html
examples/: get_color_and_proximity.py
