[tool.poetry]
name = "revcolorsensor"
version = "0.1.0"
description = ""
authors = ["Jason Li <jasonli.0616@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pigpio = "^1.78"


[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
